--- a/iframe/public/views/landing.html
+++ b/iframe/public/views/landing.html
@@ -68,8 +68,7 @@
       <!-- 🌟 Static Meetix Header -->
       <header class="flex justify-between items-center px-6 py-4 border-b border-gray-200 relative">
         <div class="flex items-center">
-<i className="fa fa-video-camera text-[#00FF40] mr-2"></i>
-
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" data-slot="icon" class="h-8 w-8 text-[#00FF40]"><path d="M4.5 4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h8.25a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3H4.5ZM19.94 18.75l-2.69-2.69V7.94l2.69-2.69c.944-.945 2.56-.276 2.56 1.06v11.38c0 1.336-1.616 2.005-2.56 1.06Z"></path></svg>
           <span class="ml-2 text-xl font-bold">Meetix</span>
         </div>
 
