--- a/server/public/views/LoginAlert.html
+++ b/server/public/views/LoginAlert.html
@@ -76,7 +76,7 @@
                                 <p class="hero-paragraph" id="message"></p>
                                 <!-- <p class="hero-paragraph">This page you are looking not exist.</p> -->
                                 <div class="hero-cta">
-                                     <a class="button button-primary pulse" onclick="window.location.href = 'http://localhost:3010/login';">
+                                     <a class="button button-primary pulse" onclick="window.location.href = 'https://meetix.mahitechnocrafts.in/login';">
         GO TO LOGIN
     </a>
                                 </div>
