--- a/server/public/views/landing.html
+++ b/server/public/views/landing.html
@@ -77,8 +77,8 @@
 <a 
   href="https://meet.mahitechnocrafts.in/meetings/details"
   style="
-    background-color: #00FF40; 
-    color: black; 
+    background-color:#9333ea; 
+    color: #fff; 
     padding: 0.5rem 1rem; 
     border-radius: 1.5rem; 
     font-weight: bold; 
